apps/aiyou_stack/aiyou-fastapi-services/infrastructure/k8s/cronjob.yaml
# Namespace definition
apiVersion: v1
kind: Namespace
metadata:
  name: pnkln-core
  labels:
    name: pnkln-core
    tier: collection
